Fix nav toggle z-index stacking issue by adding position: relative

--- a/public/index.css
+++ b/public/index.css
@@ -2637,6 +2637,7 @@ footer {
     width: 32px;
     height: 32px;
     z-index: 1100;
+    position: relative;
     border: none !important;
     outline: none !important;
     background: transparent !important;
